--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,6 @@
   </head>
 
   <body>
-     <script data-main="scripts/main" src="scripts/vendor/requirejs/require.js"></script>
+     <script data-main="scripts/main.js" src="scripts/vendor/requirejs/require.js"></script>
   </body>
 </html>
