grunt understanding environments and css working

--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>multikanban - a simple kanban for multiple personal projects.</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
-    <meta name="description" content="">
+    <meta name="description" content="A simple kanban for multiple personal projects.">
     <meta name="viewport" content="width=device-width">
+
+    <link rel="stylesheet" media="screen" href="styles/styles.css" type="text/css" />
   </head>
 
   <body>
