--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>multikanban - a simple kanban for multiple personal projects.</title>
+    <title>multikanban - a simple kanban for multiple personal projects</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="A simple kanban for multiple personal projects.">
@@ -11,6 +11,12 @@
   </head>
 
   <body>
-     <script data-main="scripts/main.js" src="scripts/vendor/requirejs/require.js"></script>
+
+    <div id="menu-region"></div>
+
+    <div id="main-region"></div>
+
+    <script data-main="scripts/main.js" src="scripts/vendor/requirejs/require.js"></script>
+ 
   </body>
 </html>
