--- a/app/index.html
+++ b/app/index.html
@@ -11,13 +11,10 @@
   </head>
 
   <body>
+    <div id="content">
 
-    <div id="menu-region">
-      <div id="header"></div>
-      <div id="footer"></div>
+      
     </div>
-
-    <div id="main-region"></div>
 
     <script data-main="scripts/main.js" src="scripts/vendor/requirejs/require.js"></script>
  
