favicon, home and about structure

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" media="screen" href="/multikanban/app/styles/styles.css" type="text/css" />
+    <link rel="icon" href="multikanban.ico" type="image/x-icon">
   </head>
 
   <body>
