--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A simple kanban for multiple personal projects.">
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" media="screen" href="styles/styles.css" type="text/css" />
+    <link rel="stylesheet" media="screen" href="styles/main.min.css" type="text/css" />
     <link rel="icon" href="multikanban.ico" type="image/x-icon">
   </head>
 
@@ -16,7 +16,7 @@
       
     </div>
 
-    <script data-main="scripts/main.js" src="scripts/vendor/requirejs/require.js"></script>
+    <script data-main="scripts/main.min.js" src="scripts/vendor/requirejs/require.js"></script>
 
   </body>
 </html>
